# timesheet-generator

./: Cargo.toml  README.md  example.txt  time.vim
src/: lib.rs  main.rs
