[package]
name = "timesheet-generator"
version = "0.3.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0-beta.2", features = ["color"] }
colored = "2.0.0"
csv = "1.1.6"
lazy_static = "1.4.0"
regex = "1.5.4"
serde = { version = "1.0.126", features = ["derive"] }
