[package]
name = "timesheet-generator"
version = "0.3.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.53", features = ["color", "derive"] }
colored = "2.0.0"
csv = "1.1.6"
lazy_static = "1.4.0"
regex = "1.5.4"
serde = { version = "1.0.126", features = ["derive"] }

[[bin]]
name = "timesheet-generator"
path = "src/main.rs"  # or wherever your main.rs is
